--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./public/Madarsa Dua Educational SchoolImage.jpg"
+      href="./about.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Madarsa Dua Educational School</title>
